--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   flutter_riverpod: ^2.6.1
   cached_network_image: ^3.4.1
   shared_preferences: ^2.5.3
+  dots_indicator: ^4.0.1
+  flutter_screenutil: ^5.9.3
+  riverpod_annotation: ^2.6.1
+  riverpod_generator: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +52,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
+  build_runner: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
