--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.1
+  font_awesome_flutter: ^10.9.0
 
 dev_dependencies:
   flutter_test:
