--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^2.6.1
   riverpod_generator: ^2.6.1
   font_awesome_flutter: ^10.9.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
