--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   riverpod_generator: ^2.6.1
   font_awesome_flutter: ^10.9.0
   intl: ^0.20.2
+  dotted_line: ^3.2.3
+  dotted_border: ^2.1.0
+  barcode_widget: ^2.0.4
+#  dotted_border: ^3.1.0
 
 dev_dependencies:
   flutter_test:
