--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   syncfusion_flutter_sliders: ^30.2.7
   email_validator: ^3.0.0
   pin_code_fields: ^8.0.1
+  uuid: ^4.5.1
 #  dotted_border: ^3.1.0
 
 dev_dependencies:
