--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   email_validator: ^3.0.0
   pin_code_fields: ^8.0.1
   uuid: ^4.5.1
+  file_picker: ^10.3.3
 #  dotted_border: ^3.1.0
 
 dev_dependencies:
