--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   pin_code_fields: ^8.0.1
   uuid: ^4.5.1
   file_picker: ^10.3.3
+  flutter_image_compress: ^2.4.0
+  path_provider: ^2.1.5
+  image_picker: ^1.2.0
 #  dotted_border: ^3.1.0
 
 dev_dependencies:
