--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_image_compress: ^2.4.0
   path_provider: ^2.1.5
   image_picker: ^1.2.0
+  fluttertoast: ^9.0.0
+  go_router: ^16.2.4
 #  dotted_border: ^3.1.0
 
 dev_dependencies:
